# COMP4490A5

./: .gitignore  CMakeLists.txt  README.md
scenes/: a.json  b.json
src/: json2scene.cpp  q1.cpp  raytracer.cpp  raytracer.h  schema.h
